--- a/Frontend/public/sucess.html
+++ b/Frontend/public/sucess.html
@@ -14,6 +14,8 @@
 <body>
     <div id="root"></div>
     <h3>Thanks for your valuable feedback</h3>
-    <script src="../src/sucess.js"></script>
+    <form action="/">
+        <input type="submit" value="Home" />
+    </form>
 </body>
 </html>
